--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .input {
-    @apply ml-6 inline-block w-full rounded-full border border-stone-200 px-4 py-2 text-sm outline-none transition-all duration-300 focus:ring focus:ring-yellow-400 focus:ring-offset-2 md:px-6 md:py-3;
+    @apply inline-block rounded-full border border-stone-200 px-4 py-2 text-sm outline-none transition-all duration-300 focus:ring focus:ring-yellow-400 focus:ring-offset-2 md:px-6 md:py-3;
   }
 
   .loader {
